data/derived/sp14/progs/unify/prog1321.ml.out
Characters 101-126:
  if head = List.hd (listReverse [w])
            ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         char
